k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
  selector:
    app: portfolio
